feeds/question/5176
<?xml version="1.0" encoding="utf-8"?>
<rss xmlns:atom="http://www.w3.org/2005/Atom" version="2.0"><channel><title>i3 FAQ - Individual question feed</title><link>https://faq.i3wm.org/questions/</link><description>Frequently asked questions and answers about the i3 window manager</description><atom:link href="http://faq.i3wm.org/feeds/question/5176/" rel="self"></atom:link><language>en</language><copyright>Copyright i3, 2012</copyright><lastBuildDate>Mon, 15 Dec 2014 09:15:45 +0000</lastBuildDate><item><title>When building from source, why does it state EVRUN_ONCE is undeclared idenfitier in floating.c?</title><link>https://faq.i3wm.org/question/5176/when-building-from-source-why-does-it-state-evrun_once-is-undeclared-idenfitier-in-floatingc/</link><description>Hi there,

I am building i3wm on slackware 14.1 from the master branch of the git repo.

All dependancies are installed, but there looks to be an error in the src/floating.c file. Output from `make` is below:

    [i3] CC src/floating.c
    ../i3/src/floating.c: In function 'drag_pointer':
    ../i3/src/floating.c:740:9: warning: implicit declaration of function 'ev_run' [-Wimplicit-function-declaration]
             ev_run(main_loop, EVRUN_ONCE);
             ^
    ../i3/src/floating.c:740:27: error: 'EVRUN_ONCE' undeclared (first use in this function)
             ev_run(main_loop, EVRUN_ONCE);
                               ^
    ../i3/src/floating.c:740:27: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/floating.o] Error 1</description><pubDate>Sun, 14 Dec 2014 04:08:51 +0000</pubDate><guid>https://faq.i3wm.org/question/5176/when-building-from-source-why-does-it-state-evrun_once-is-undeclared-idenfitier-in-floatingc/</guid></item><item><title>Comment by joepd for &lt;p&gt;Hi there,&lt;/p&gt;

&lt;p&gt;I am building i3wm on slackware 14.1 from the master branch of the git repo.&lt;/p&gt;

&lt;p&gt;All dependancies are installed, but there looks to be an error in the src/floating.c file. Output from &lt;code&gt;make&lt;/code&gt; is below:&lt;/p&gt;

&lt;pre&gt;&lt;code&gt;[i3] CC src/floating.c
../i3/src/floating.c: In function 'drag_pointer':
../i3/src/floating.c:740:9: warning: implicit declaration of function 'ev_run' [-Wimplicit-function-declaration]
         ev_run(main_loop, EVRUN_ONCE);
         ^
../i3/src/floating.c:740:27: error: 'EVRUN_ONCE' undeclared (first use in this function)
         ev_run(main_loop, EVRUN_ONCE);
                           ^
../i3/src/floating.c:740:27: note: each undeclared identifier is reported only once for each function it appears in
&lt;/code&gt;&lt;/pre&gt;

&lt;p&gt;make: &lt;em&gt;*&lt;/em&gt; [src/floating.o] Error 1&lt;/p&gt;
</title><link>https://faq.i3wm.org/question/5176/when-building-from-source-why-does-it-state-evrun_once-is-undeclared-idenfitier-in-floatingc/?comment=5181#comment-5181</link><description>This is a user support forum. Please report your bug at the bug tracker. </description><pubDate>Mon, 15 Dec 2014 09:15:45 +0000</pubDate><guid>https://faq.i3wm.org/question/5176/when-building-from-source-why-does-it-state-evrun_once-is-undeclared-idenfitier-in-floatingc/?comment=5181#comment-5181</guid></item></channel></rss>